--- a/sys.config
+++ b/sys.config
@@ -1,13 +1,13 @@
 [
- {n2o, [{port,8000},
-        {app,review},
-        {upload,"./apps/review/priv/static/"},
+ {n2o, [{port,4000},{websocket_port,443},
+        {app,my_n2o_app},
+        {upload,"./apps/my_n2o_app/priv/static/"},
         {search,"/Users/5HT/depot/synrc/synrc.com/apps/*/doc/web/*.htm"},
         {mode,dev},
         {route,routes},
         {mq,n2o_mq},
         {formatter,bert},
-        {minify,{"apps/review/priv/static",
+        {minify,{"apps/my_n2o_app/priv/static",
                 ["deps/n2o/priv/bullet.js",
                  "deps/n2o/priv/n2o.js",
                  "deps/n2o/priv/ftp.js",
