--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {lib_dirs,["apps","deps"]}.
 {deps_dir,"deps"}.
 {deps, [
-    {gproc,  ".*", {git, "git://github.com/uwiger/gproc",       {tag, "0.6.1"}}},
+    {gproc,  ".*", {git, "git://github.com/uwiger/gproc",       {tag, "0.6.1"} }},
     {rest,   ".*", {git, "git://github.com/synrc/rest",         {tag, "2.9"}    }},
     {erlydtl,".*", {git, "git://github.com/evanmiller/erlydtl", {tag, "0.8.0"}  }},
     {nitro,  ".*", {git, "git://github.com/synrc/nitro",        {tag, "2.4"} }},
@@ -12,7 +12,9 @@
     {active, ".*", {git, "git://github.com/synrc/active",       {tag, "1.9"}    }},
     {avz,    ".*", {git, "git://github.com/synrc/avz",          {tag, "4.4"} }},
     {n2o,    ".*", {git, "git://github.com/synrc/n2o",          {tag, "4.4"} }},
-    {kvs,    ".*", {git, "git://github.com/synrc/kvs",          {tag, "3.9.1"}}}
+    {jsone,  ".*", {git, "git://github.com/sile/jsone.git",     {tag,"1.4.4"} }},
+    {epgsql,    ".*", {git, "https://github.com/epgsql/epgsql", {tag, "3.3.0"} }},
+    {kvs,    ".*", {git, "git://github.com/synrc/kvs",          {tag, "3.9.1"} }}
 ]}.
 {fetch_speed,fast_master}.
 {verbose,1}.
