Environment variables (sys.config)

--- a/sys.config
+++ b/sys.config
@@ -1,6 +1,7 @@
 [
  {n2o, [{port,4000},{websocket_port,443},
         {app,my_n2o_app},
+        {appurl, <<"https://mybesttestapp.win/">>},
         {upload,"./apps/my_n2o_app/priv/static/"},
         {search,"/Users/5HT/depot/synrc/synrc.com/apps/*/doc/web/*.htm"},
         {mode,dev},
